# esp32_idf_5.1_demo

10_HTTP_CLIENT/: sdkconfig  sdkconfig.old
10_HTTP_CLIENT/Web_Server/: WebServer.py
10_HTTP_CLIENT/main/: CMakeLists.txt  common.h  http_client.c  http_client.h  main.c  p_exti.c  p_i2c_sht20.h  spiffs.c
10_HTTP_SERVER/: CMakeLists.txt  ota_fs_4M.csv
10_HTTP_SERVER/Web_Client/: Web_Client.py
10_HTTP_SERVER/fs_data/: data.json  html.html  p_wifi_sta.c
10_HTTP_SERVER/main/: CMakeLists.txt  common.h  http_server.c  http_server.h  main.c  p_wifi_sta.c  spiffs.c  spiffs.h
12_LEDC/: sdkconfig
12_LEDC/fs_data/: p_adc.h  spiffs.c  spiffs.h
12_LEDC/main/: CMakeLists.txt  main.c  p_ledc.c  p_ledc.h  spiffs.c  spiffs.h
13_SNTP/fs_data/: p_wifi_sta.c
13_SNTP/main/: CMakeLists.txt  common.h  main.c  sntp.c
14_TOUCH/fs_data/: html.html  p_gpttim.h  p_uart.h
14_TOUCH/main/: CMakeLists.txt  common.h  main.c  p_touch.c  p_touch.h  spiffs.c  spiffs.h
15_SD_SPI/: CMakeLists.txt
15_SD_SPI/main/: CMakeLists.txt  main.c  p_wifi_sta.c  spiffs.h
16_WS2812_SPI/: sdkconfig  sdkconfig.old
16_WS2812_SPI/fs_data/: spiffs.c  spiffs.h
16_WS2812_SPI/main/: CMakeLists.txt  common.h  main.c  p_wifi_sta.h  sd_spi_fat.c  sd_spi_fat.h  ws2812_spi.c  ws2812_spi.h
17_MQTT-TCP/: sdkconfig.old
17_MQTT-TCP/fs_data/: json.json  p_gpttim.c
17_MQTT-TCP/main/: CMakeLists.txt  common.h  main.c  p_mqtt.c  p_mqtt.h  p_wifi_sta.c
17_MQTT_TCP_ONENET/: sdkconfig  sdkconfig.old
17_MQTT_TCP_ONENET/fs_data/: index.html
17_MQTT_TCP_ONENET/main/: CMakeLists.txt  bspled.c  http_server.c  http_server.h  main.c  p_mqtt.c  (+6 more)
1_GPIO/: CMakeLists.txt
2_GPIO-INT/: CMakeLists.txt
3_ADC/: CMakeLists.txt
4_UART/: CMakeLists.txt
5_TIM/: CMakeLists.txt
5_TIM/main/: CMakeLists.txt  bspkey.h  main.c  p_tim.c  p_tim.h
6_I2C/: CMakeLists.txt
7_WiFi_AP/: sdkconfig
8_WiFi_TCP_SERVER/main/: CMakeLists.txt  main.c  p_wifi_sta.c  p_wifi_sta.h
99_lvgl/st7701s_rgb_480x480/main/: CMakeLists.txt  datafile.h  http_server.c  http_server.h  idf_component.yml  lvgl_interface.c  lvgl_interface.h  main.c  p_mqtt.c  sd_spi_fat.c  sd_spi_fat.h  sntp.c  sntp.h  wifi_ap.c  wifi_ap.h  wifi_mqtt.c  wifi_mqtt.h  wifi_sta.c  wifi_sta.h
99_lvgl/st7701s_rgb_480x480/main/lvgl_app/: font_14.c  font_24.c  font_40.c  font_80.c  font_ch_30.c  lvglstart.c  lvglstart.h
99_lvgl/st7789/main/: CMakeLists.txt  bspkey.c  bspkey.h  gpio_button.c  gpio_button.h  idf_component.yml  led_brightness.c  main.c  st7789.c  st7789_config.h
(+76 files in other folders)
