idf_component_register(SRCS  
                        "main.c" 
                        "bspled.c" 
                        "bspkey.c" 
                        "p_adc.c"
                        "p_exti.c" 
                        "p_uart.c" 
                        "p_tim.c" 
                       INCLUDE_DIRS ".")
