idf_component_register(SRCS  
                        "main.c" 
                        "bspled.c" 
                        "bspkey.c" 
                        "p_adc.c"
                        "p_exti.c" 
                        "p_uart.c" 
                        "p_gpttim.c"
                        "p_i2c_sht20.c"
                        "p_wifi_sta.c"
                       INCLUDE_DIRS ".")
